Ate aula 93 javascript

--- a/Javascript/Aulas/81-90-Aulas/86-Jogo-Nave-P8/86.css
+++ b/Javascript/Aulas/81-90-Aulas/86-Jogo-Nave-P8/86.css
@@ -61,3 +61,13 @@ body
     height: 70px;
     position: absolute;
 }
+.telaMsg
+{
+    position: absolute;
+    margin-left: 25%;
+    top:50px;
+    left: 50px;
+    width: 720px;
+    height: 621px;
+    display: none;
+}
