Curso react completo

--- a/ReactJs/aulas/src/componentes/aulas-31-40/aula-33-34/calculadora-componentes/DisplayCalculadora.css
+++ b/ReactJs/aulas/src/componentes/aulas-31-40/aula-33-34/calculadora-componentes/DisplayCalculadora.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     padding-left: 20px;
     padding-right: 20px;
-    justify-content: center;
+    justify-content: right;
     align-items: flex-start;
     background-color: #444;
     width: 260px;    
@@ -12,12 +12,12 @@
 .cssOperacao {
     font-size: 25px;
     color: #fff;
-    width: 540px;
+    
     height:20px;   
 }
 
 .cssResultado {
     font-size: 50px;
     color: #fff;
-    width: 540px;
+    
 }
